# gesture-rock-paper-scissors

./: .gitignore  README.md  pyproject.toml  requirements.txt  runtime.txt  streamlit_app.py
.streamlit/: config.toml
src/gesture_rps/: ai_policy.py  config.yaml  game_logic.py  gesture_detector.py  main.py  ui_overlay.py  web_server.py
src/gesture_rps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gesture_rps/trains/: labels.csv
src/gesture_rps/utils/: facy_text.py  timing.py
src/gesture_rps/web/static/: app.js  index.html  styles.css
tests/: conftest.py  test_rules.py
webapp/: requirements.txt  webapp.py
